--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         <div class="row my-1">
             <header class="col-12">
                 <h1 class="text-success text-center" id="tituloPrincipal">Alguns dos maiores craques do futebol brasileiro</h1>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#pele">Pelé</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#socrates">sócrates</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#bobo">Bobô</a>
+                    </li>
+                  </ul>
             </header>
         </div>
         <div class="row my-1">
@@ -78,7 +89,7 @@
             </div>
         </div>
         <div class="row my-1">
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-xl-4 col-md-6 col-sm-12" id="pele">
                 <div class="card mt-2" style="width: 33,33%;">
                     <img src="./img/img-redimensionadas_personalizada/cosmos.jpg" alt="Pelé comemorando um gol">
                     <div class="card-body">
@@ -90,7 +101,7 @@
                 </div>
             </div>
             <div class="col-xl-4 col-md-6 col-sm-12">
-                <div class="card mt-2" style="width: 33,33%;">
+                <div class="card mt-2" style="width: 33,33%;" id="socrates">
                     <img src="./img/img-redimensionadas_personalizada/SocratesBrasil_622x350.jpg" alt="Sócrates comemorando um gol">
                     <div class="card-body">
                         <h5 class="card-title">Sócrates</h5>
@@ -100,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-xl-4 col-md-6 col-sm-12" id="bobo">
                 <div class="card mt-2" style="width: 33,33%;">
                     <img src="./img/img-redimensionadas_personalizada/Bobo-seleccao-brasileira_upscayl_4x_realesrgan-x4plus_622x350.jpg" alt="Bobô comemorando um gol">
                     <div class="card-body">
